# election_69_analyzer_sub_fork

./: LICENSE  README.md  UV_MIGRATION.md  election-fraude-notice.txt  index.html  main.py  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: update-data.yml
data/: anomaly_report.json
docs/: index.html
docs/data/: anomaly_report.json  party-data.json
scripts/: extract_party_colors.py  generate_anomaly_report.py  pack_for_deployment.py  verify_hypothesis.py
